Thu Oct 24 00:11:24 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/ostruct.rb: raise NoMethodError with a #name and #args.
	  Raise RuntimeError when modifying frozen instances
	  instead of TypeError.
	  (OpenStruct#each_pair): Return an enumerator with size
	  (OpenStruct#delete): Use the converted argument.
	  Patches by Kenichi Kamiya. [Fixes GH-383]

	* test/ostruct/test_ostruct.rb: Added tests for above.

Thu Oct 24 00:10:22 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* array.c: Add Array#to_h [Feature #7292]

	* enum.c: Add Enumerable#to_h

Wed Oct 23 23:48:28 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c: Rename free_min to min_free_slots and free_min_page to
	  max_free_slots. The algorithm for heap growth is:
	    if (swept_slots < min_free_slots) pages++
	    if (swept_slots > max_free_slots) pages--

Wed Oct 23 22:51:03 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (config.h): VC 2013 supports C99 mathematics
	  functions.  [ruby-core:57981] [Bug #9044]

Wed Oct 23 19:13:18 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: move increment from heap to heap_pages.
	  Share `increment' information with heaps.

	* gc.c: change ratio of heap_pages_free_min_page
	  to 0.80.
	  This change means slow down page freeing speed.

Wed Oct 23 17:52:03 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (heap_pages_free_unused_pages): cast to (int) for size_t
	  variable `i'.

Wed Oct 23 17:39:35 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: introduce tomb heap.
	  Tomb heap is where zombie objects and ghost (freed slot) lived in.
	  Separate from other heaps (now there is only eden heap) at sweeping
	  helps freeing pages more efficiently.
	  Before this patch, even if there is an empty page at former phase
	  of sweeping, we can't free it.

	  Algorithm:
	    (1) Sweeping all pages in a heap and move empty pages from the
	        heap to tomb_heap.
	    (2) Check all exsisting pages and free a page